add github link

--- a/notebook/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
+++ b/notebook/Yes_Bank_Stock_Closing_Price_Prediction.ipynb
@@ -36,7 +36,13 @@
         "id": "F6v_1wHtG2nS"
       },
       "source": [
-        "Write the summary here within 500-600 words."
+        "The objective of this project is to analyze the impact of a fraud case involving Rana Kapoor on the stock prices of Yes Bank, a prominent bank in the Indian financial domain. The dataset used in this project consisted of monthly stock prices of Yes Bank since its inception, including closing, starting, highest, and lowest stock prices.\n",
+        "\n",
+        "To predict the stock's closing price, I developed three models namely Ridge_regression, Random Forest and XGBoost Regressor model was developed. The model was trained using the historical stock price data and various features such as mean of Open, High and Low faetures.Additional features were engineered by taking lags to capture the temporal trends and patterns in the data.The performance of the model was evaluated using metrics like RMSE (Root Mean Squared Error),adjustes R2 and R2 score. xGBoost regressor performed well among the three with high R2 score and adjusted R2.\n",
+        "\n",
+        "The analysis aimed to uncover any patterns or changes in stock prices related to the fraud case involving Rana Kapoor. The feature importance provided by the XGBoost model helped identify the key factors influencing the stock price.\n",
+        "\n",
+        "Overall, the project aimed to contribute to a better understanding of the relationship between the fraud case and Yes Bank's stock prices, and to explore the potential of predictive models in the financial domain. The findings and insights gained from this project can be utilized by investors, analysts, and decision-makers to make informed investment or business decisions related to Yes Bank's stock."
       ]
     },
     {
@@ -63,7 +69,7 @@
         "id": "h1o69JH3Eqqn"
       },
       "source": [
-        "Provide your GitHub Link here."
+        "https://github.com/DeepanshuThakur06/Machine-learning-project"
       ]
     },
     {
@@ -82,90 +88,6 @@
       },
       "source": [
         "Yes Bank is a well-known bank in the Indian financial domain. Since 2018, it has been in the news because of the fraud case involving Rana Kapoor. Owing to this fact, it was interesting to see how that impacted the stock prices of the company and whether Time series models or any other predictive models can do justice to such situations. This dataset has monthly stock prices of the bank since its inception and includes closing, starting, highest, and lowest stock prices of every month. The main objective is to predict the stock’s closing price of the month."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mDgbUHAGgjLW"
-      },
-      "source": [
-        "# **General Guidelines** : -  "
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ZrxVaUj-hHfC"
-      },
-      "source": [
-        "1.   Well-structured, formatted, and commented code is required.\n",
-        "2.   Exception Handling, Production Grade Code & Deployment Ready Code will be a plus. Those students will be awarded some additional credits.\n",
-        "     \n",
-        "     The additional credits will have advantages over other students during Star Student selection.\n",
-        "       \n",
-        "             [ Note: - Deployment Ready Code is defined as, the whole .ipynb notebook should be executable in one go\n",
-        "                       without a single error logged. ]\n",
-        "\n",
-        "3.   Each and every logic should have proper comments.\n",
-        "4. You may add as many number of charts you want. Make Sure for each and every chart the following format should be answered.\n",
-        "        \n",
-        "\n",
-        "```\n",
-        "# Chart visualization code\n",
-        "```\n",
-        "            \n",
-        "\n",
-        "*   Why did you pick the specific chart?\n",
-        "*   What is/are the insight(s) found from the chart?\n",
-        "* Will the gained insights help creating a positive business impact?\n",
-        "Are there any insights that lead to negative growth? Justify with specific reason.\n",
-        "\n",
-        "5. You have to create at least 15 logical & meaningful charts having important insights.\n",
-        "\n",
-        "\n",
-        "[ Hints : - Do the Vizualization in  a structured way while following \"UBM\" Rule.\n",
-        "\n",
-        "U - Univariate Analysis,\n",
-        "\n",
-        "B - Bivariate Analysis (Numerical - Categorical, Numerical - Numerical, Categorical - Categorical)\n",
-        "\n",
-        "M - Multivariate Analysis\n",
-        " ]\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "6. You may add more ml algorithms for model creation. Make sure for each and every algorithm, the following format should be answered.\n",
-        "\n",
-        "\n",
-        "*   Explain the ML Model used and it's performance using Evaluation metric Score Chart.\n",
-        "\n",
-        "\n",
-        "*   Cross- Validation & Hyperparameter Tuning\n",
-        "\n",
-        "*   Have you seen any improvement? Note down the improvement with updates Evaluation metric Score Chart.\n",
-        "\n",
-        "*   Explain each evaluation metric's indication towards business and the business impact pf the ML model used.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
       ]
     },
     {
